--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 body{
 
-    font-family: font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
+h1{
+    font-size: 50px;
+}
+
+.title-color{
+    color: orange;
+}
