--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
 
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 h1{
@@ -8,5 +9,45 @@ h1{
 }
 
 .title-color{
-    color: orange;
+    color: #2F80ED;
+}
+
+section{
+    display: flex;
+}
+
+.head-part{
+    width: 50%;
+    padding-left: 100px;
+    padding-top: 10px;
+    padding-right: 15px;
+}
+
+.img-part{
+    width: 50;
+    padding: 1% 3% 3% 3% ;
+}
+
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(#56CCF2, #2F80ED);
+    padding: 10px 40px;
+    border-radius: 7px;
+    color: white;
+    font-weight: 700;
+}
+
+p{
+    margin-bottom: 25px;
+    text-align: justify;
+}
+
+.img-style{
+    width: auto;
+    height: auto;
+}
+
+.top-bg{
+    background-image: url(img/top-banner.png);
+    background-repeat: no-repeat;
 }
