--- a/style.css
+++ b/style.css
@@ -70,24 +70,48 @@ p{
     width: 40%;
     padding-left: 40px;
     box-shadow: 10px 10px 40px gray;
-    margin-left: 5%;
     margin-right: 5%;
+    margin-left: 5%;
     border-radius: 10px;
     padding-bottom: 40px;
-    margin-top: 20px;
-
 }
 
 .exp{
     background-image: url(img/exp-bg.png);
     background-repeat: no-repeat;
     background-position: left;
-    background-position-y: 190px;
-    background-size: 120px;
-
+    background-position-y: 165px;
+    background-size: 130px;
 }
 
+#expborder1{
+   border-left: 8px solid;
+   border-image: linear-gradient(#fc4a1a, #f7b733);
+   border-image-slice: 30;
+}
 
+#expborder{
+    border-left: 8px solid;
+   border-image: linear-gradient(#4c2c58, #a044ff);
+   border-image-slice: 30;
+}
+
+footer{
+    margin-top: 150px;
+}
+
+footer p{
+    text-align: center;
+    font-weight: 200;
+}
+
+.exphead{
+    margin: 100px 0px 50px 50px;
+    text-align: left;
+}
+.footlink{
+    text-decoration: none;
+}
 
 /* 2nd Page Design End */
 
